Pass arguments to maven exec plugin for startup