@@ -7,7 +7,12 @@ if ! type mvn &> /dev/null; then
 	exit 1
 fi
 
-mvn -o -pl modules/autoreferee-main exec:java
+# the productive=true flag controls some behavior for real games like automatic recording
+mvn -pl modules/autoreferee-main exec:exec -Dmaven.repo.local=repository \
+    -Dexec.args="-Dautoref.mode=PASSIVE -Dproductive=true \
+    -Xms128m -Xmx1G -server -Xnoclassgc -Xverify:none -Dsun.java2d.d3d=false -XX:+UseG1GC -Djava.net.preferIPv4Stack=true -XX:-OmitStackTraceInFastThrow \
+    -classpath %classpath \
+    edu.tigers.autoref.AutoReferee"
 
 if [ "$?" != "0" ]; then
 	echo
